--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <link rel="stylesheet" href="/css/home/register.css">
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <div class="login-page">
       <div class="form">
-        <form class="login-form">
+        <form class="register-form">
           <input id="id" type="text" placeholder="ID"/>
           <input id="psword" type="password" placeholder="PASSWORD"/>
-          <button id="login">login</button>
-          <p class="message">Not registered? <a href="/register">Create an account</a></p>
+          <input id="name" type="text" placeholder="NAME"/>
+          <input id="email" type="text" placeholder="EMAIL"/>
+          <button id="register">create</button>
+          <p class="message">Already registered? <a href="/login">Sign In</a></p>
         </form>
       </div>
     </div>
