Create a member registration controller

--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -14,6 +14,7 @@
         <form class="register-form">
           <input id="id" type="text" placeholder="ID"/>
           <input id="psword" type="password" placeholder="PASSWORD"/>
+          <input id="_psword" type="password" placeholder="PASSWORD CHECK"/>
           <input id="name" type="text" placeholder="NAME"/>
           <input id="email" type="text" placeholder="EMAIL"/>
           <button id="register">create</button>
